# bmstu_tads

lab_01/: CMakeLists.txt  Makefile  ~$Отчет.docx
lab_01/doc/: Отчет.docx
lab_01/inc/: cdio.h  const.h  norm_func.h  process.h  struct.h
lab_01/src/: cdio.c  main.c  norm_func.c  process.c
lab_02/: CMakeLists.txt  Makefile  data.txt  data_for_time.txt
lab_02/doc/: Отчет.docx
lab_02/inc/: cdio.h  const.h  delete.h  file_process.h  process.h  sorts.h  structs.h  time_count.h
lab_02/src/: cdio.c  delete.c  file_process.c  main.c  process.c  sorts.c  time_count.c
lab_03/: CMakeLists.txt  Makefile  nrfj.txt
lab_03/doc/: Отчет.docx
lab_03/inc/: cdio.h  const.h  file_process.h  process.h  structs.h  time_analysis.h
lab_03/src/: cdio.c  file_process.c  main.c  process.c  time_analysis.c
lab_04/: CMakeLists.txt  Makefile
lab_04/doc/: Отчет.docx
lab_04/inc/: analysis.h  cdio.h  const.h  process.h  structs.h
lab_04/src/: analysis.c  cdio.c  main.c  process.c
lab_05/: CMakeLists.txt  Makefile
lab_05/doc/: Отчет.docx
lab_05/inc/: analysis.h  array.h  cdio.h  const.h  list.h  process.h
lab_05/src/: analysis.c  array.c  cdio.c  list.c  main.c  process.c
lab_06/: Makefile  analysis.txt  analysis2.txt  avl_tree.gv  bin_tree.gv  data.txt  trains.txt
lab_06/doc/: Отчет.docx
lab_06/inc/: analysis.h  avl_tree.h  bin_tree.h  cdio.h  const.h  hash_table.h
lab_06/src/: analysis.c  avl_tree.c  bin_tree.c  cdio.c  hash_table.c  main.c
lab_07/: Makefile  data.txt  del_graph.gv  graph.gv
lab_07/doc/: Отчет.docx
lab_07/inc/: analysis.h  cdio.h  const.h  (+1 more)
(+4 files in other folders)
